--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: solab.ai
+site_name: solab.co
 theme:
   name: material
   features:
@@ -48,8 +48,8 @@ markdown_extensions:
   - pymdownx.mark
   - attr_list
   - pymdownx.emoji:
-      emoji_index: !!python/name:materialx.emoji.twemoji
-      emoji_generator: !!python/name:materialx.emoji.to_svg
+      emoji_index: !!python/name:material.extensions.emoji.twemoji
+      emoji_generator: !!python/name:material.extensions.emoji.to_svg
 copyright: | 
   &copy; 2024 <a href="https://github.com/Solab5" target="_blank" rel="noopener">Morris Twinomugisha</a> 
 
